--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
 
 <link rel="icon" href=https://docs.google.com/uc?export=download&id=1BhesKV3aHPsnZBpxtu9rqWq2XbkwN41C>
 
+	
+	
+	
+	
+	<meta name="google-site-verification" content="QfRhgTJkrZIyppV0bm1UV0MAFzXOkcBKY5cFrRB6Zvs" />
+	
+	
 
 
 <style>
